<resources>
    <string name="app_name">KIRTHANA AGENCIES</string>
    <string name="product_name">Printer Type</string>
    <string name="product_id">Printer ID</string>
    <string name="quantity">Quantity</string>
    <string name="unit_cost">Unit Cost</string>
    <string name="invoice">Invoice</string>
    <string name="stock">Stock</string>
    <string name="update_product">Update Printer Type</string>
    <string name="add_product">Add Printer Type</string>
    <string name="history">History</string>
    <string name="recent_invoice">Recent Invoice</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_id">Customer ID</string>
    <string name="phone_no">Phone No</string>
    <string name="generate">Generate</string>
    <string name="qty">Qty</string>
    <string name="select">Select</string>
    <string name="enter_all_the_value">Enter all the value</string>
    <string name="please_enter_the_customer_details">please enter the customer details</string>
    <string name="enter_the_value">Enter the value</string>
    <string name="successfully_generated">Successfully Generated</string>
    <string name="please_add_product_first">Please add  product first!</string>
    <string name="you_cannot_add_more_then_10_value">you cannot add more then 10 value</string>
    <string name="add_values">add values</string>


    <string name="submit">Submit</string>
    <string name="open_custom_dialog">Open Custom Dialog</string>
    <string name="custom_dialog">Custom Dialog</string>
    <string name="printer_type">Printer Type</string>
    <string name="the_printer_type_already_available">The Printer Type already available!</string>
    <string name="cost_is_required">Cost is required</string>
    <string name="quantity_is_required">Quantity is required</string>
    <string name="printer_type_is_required">Printer Type is required</string>
    <string name="press_ok_to_add_printer_type">Press OK to add Printer Type!</string>
    <string name="net_quantity_is_required">Net Quantity is required</string>
    <string name="customer_name_is_required">Customer Name is required</string>
    <string name="customer_phone_no_is_required">Customer Phone No is required</string>
    <string name="no_printer_type_added">No Printer Type added</string>
    <string name="sale">Sale</string>
    <string name="deleted_invoice">Deleted Invoice</string>
    <string name="draw_you_signature_in_the_box">Draw you signature in the box</string>
    <string name="clear">clear</string>
    <string name="save">Save</string>
    <string name="bill_no">Bill No</string>
    <string name="to_date">To Date</string>
    <string name="from_date">From Date</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="click_to_sign_up">Click to sign up</string>
    <string name="username">Username</string>
    <string name="re_type_password">Re-type password</string>
    <string name="new_password">New password</string>
    <string name="sign_up">Sign up</string>
    <string name="i_agree_use_my_signature">I agree use my signature</string>
    <string name="no_items_to_display">No items to display.</string>
    <string name="enter_printer_name">Enter Printer Name</string>
    <string name="file_is_removed_form_internal_storage_do_you_want_to_generate_again">"File is removed form Internal Storage..Do you want to generate again? "</string>
    <string name="alert">Alert !</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="do_you_want_to_delete">"Do you want to Delete..? "</string>
    <string name="file_not_found">file not found</string>
    <string name="do_you_want_to_undo">"Do you want to Undo..? "</string>
    <string name="ok">OK</string>
    <string name="please_agree_to_continue">Please agree to continue</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_date">Invalid Date</string>
    <string name="please_enter_all_the_fields">Please enter all the fields</string>
    <string name="login_successfull">Login successfull</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="press_ok_to_logout">Press OK to Logout!</string>
    <string name="you_press_cancel_button">You pressed Cancel button</string>
    <string name="choose_language" translatable="false">Choose Language...</string>
    <string name="mobile_number_must_be_10_digits">Mobile number must be 10 digits</string>
    <string name="printer_type_is_required1">Printer type is required</string>
    <string name="add_printer_information">add Printer information</string>
    <string name="user_name_is_required">User Name is required</string>
    <string name="user_name_is_already_exist">User Name is already exist</string>
    <string name="new_password_is_required">New password is required</string>
    <string name="new_password_must_8_letters">New password must 8 letters</string>
    <string name="re_type_password_is_required">Re-type password is required</string>
    <string name="new_password_and_re_type_password_doesn_t_match">New password and Re-type password doesn\'t match</string>
    <string name="enter_cost">Enter Cost</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="edit_signature" translatable="false">Edit Signature</string>
    <string name="export_invoice" translatable="false">Export Invoice</string>
    <string name="import_invoice" translatable="false">Import Invoice</string>
    <string name="user_id">User Id</string>
    <string name="no_invoice_found_to_export">"No Invoice found to Export "</string>


</resources>