<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/lan"
        android:title="@string/language"
        android:icon="@drawable/baseline_language_24"
        />

    <item android:id="@+id/EditSignature"
        android:title="@string/edit_signature"
        android:icon="@drawable/baseline_edit_sig"
        />
    <item android:id="@+id/Export"
        android:title="@string/export_invoice"
        android:icon="@drawable/baseline_ios_share_24"
        />
    <item android:id="@+id/Import"
        android:title="@string/import_invoice"
        android:icon="@drawable/baseline_import_export_24"
        />
    <item
        android:id="@+id/Logout"
        android:title="@string/logout"
        android:icon="@drawable/baseline_logout_24"
        />
</menu>