<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="370dp"
        android:layout_height="51dp"
        android:text="Update Product"
        android:textSize="24sp"
        android:textStyle="bold" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        android:columnCount="2"
        android:rowCount="4">

        <TextView
            android:layout_width="147dp"
            android:layout_height="40dp"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/product_name"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/pname_et"
            android:layout_width="231dp"
            android:layout_height="40dp"
            android:layout_row="0"
            android:layout_column="1"
            android:text="product_name"
            android:textSize="20sp" />

        <TextView
            android:layout_width="145dp"
            android:layout_height="40dp"
            android:layout_row="1"
            android:layout_column="0"
            android:text="Net Quatity"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/qty_et"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_row="1"
            android:layout_column="1"
            android:hint="@string/qty"
            android:imeOptions="actionNext"
            android:inputType="number" />

        <TextView
            android:layout_width="144dp"
            android:layout_height="40dp"
            android:layout_row="2"
            android:layout_column="0"
            android:text="Unit cost"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/cost_et"
            android:layout_width="233dp"
            android:layout_height="40dp"
            android:hint="@string/unit_cost"
            android:imeOptions="actionNext"
            android:inputType="number" />
    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/submit"
       android:id="@+id/submit_button"/>
</LinearLayout>