<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="4">

        <Spinner
            android:id="@+id/sproductid"
            android:layout_width="145dp"
            android:layout_height="47dp"
            android:layout_row="0"
            android:layout_column="0"

            android:gravity="center"
            android:hint="@string/product_id"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/productname"
            android:layout_width="267dp"
            android:layout_height="52dp"
            android:layout_row="0"
            android:layout_column="1"

            android:gravity="fill"
            android:hint="@string/product_name"
            android:textSize="17sp" />


    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_Qty"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:hint="@string/qty"
            android:inputType="number"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </GridLayout>

</LinearLayout>
