<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Signature">

    <TextView
        android:id="@+id/tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/draw_you_signature_in_the_box"
        android:textSize="20sp" />

    <com.kyanogen.signatureview.SignatureView
        android:id="@+id/signature_view"
        android:layout_width="350dp"
        android:layout_height="110dp"
        android:layout_below="@+id/tx"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"

        android:layout_marginStart="20dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_border"
        app:backgroundColor="#00AC8D8D"
        app:enableSignature="true"
        app:penColor="#000000"
        app:penSize="2dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signature_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear" />

        <Button
            android:id="@+id/gen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/generate" />

    </LinearLayout>

</RelativeLayout>