<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AddProductActivity">


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="200dp"
        android:columnCount="2"
        android:rowCount="4">
        <TextView
            android:id="@+id/Product_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/product_name"
            android:textSize="18sp"
            style="@style/TextAppearance.AppCompat.Large"
            android:gravity="center"/>
        <EditText
            style="@style/Widget.AppCompat.EditText"
            android:id="@+id/Product_Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="text"
            android:layout_row="0"
            android:layout_column="1"
            android:ems="10"/>



        <TextView
            android:id="@+id/Quantity_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_row="1"

            android:layout_column="0"
            android:text="@string/quantity"
            android:textSize="18sp"
            android:gravity="center"/>

        <EditText
            style="@style/Widget.AppCompat.EditText"
            android:id="@+id/Quantity_Edit"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:ems="10"
            android:text="1"
            android:inputType="number" />
        <TextView
            android:id="@+id/Cost_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/unit_cost"
            android:textSize="18sp"
            android:gravity="center_horizontal"/>
        <EditText
            style="@style/Widget.AppCompat.EditText"
            android:id="@+id/Cost_Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_row="2"
            android:layout_column="1"
            android:inputType="number"
            android:ems="10"/>

    </GridLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:id="@+id/get"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="250dp"
        android:foregroundGravity="center"
        android:src="@drawable/baseline_add_24" />

</RelativeLayout>