<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.EditSignature">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/logo"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/textfont"
            android:maxLines="1"
            android:text="KIRTHANA AGENCIES"
            android:textSize="21dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@+id/logo"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/textfont"
            android:maxLines="1"
            android:text="EDit signature"
            android:textSize="21dp" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"

            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/draw_you_signature_in_the_box"
            android:textSize="20sp" />

        <com.kyanogen.signatureview.SignatureView
            android:id="@+id/signature_view"
            android:layout_width="350dp"
            android:layout_height="110dp"
            android:layout_below="@+id/tx"

            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"

            android:layout_marginStart="20dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_border"
            app:backgroundColor="#00AC8D8D"
            app:enableSignature="true"
            app:penColor="#000000"
            app:penSize="2dp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signature_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear" />

            <Button
                android:id="@+id/gen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:text="@string/save" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>