<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ForgotPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearlogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/logo" />

                <TextView
                    android:id="@+id/your_text_view_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/logo"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="@font/textfont"
                    android:text="KIRTHANA AGENCIES"
                    android:textSize="30sp"
                    android:maxLines="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constrainedWidth="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/entri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearlogo"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="200dp"
                android:background="@drawable/round"
                android:backgroundTint="@color/white"
                android:elevation="30dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/UserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/edit_text_bg"
                    android:ems="10"
                    android:hint="User Id"
                    android:inputType="text"

                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    />

                <EditText
                    android:id="@+id/NewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:ems="10"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:fontFamily="@font/aovelransrounded"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <EditText
                    android:id="@+id/RePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:ems="10"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/re_type_password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:fontFamily="@font/aovelransrounded"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/design_default_color_secondary_variant"
                    android:padding="15dp"
                    android:text="@string/submit"
                  android:layout_marginBottom="50dp"
                    android:textAllCaps="false"
                    app:cornerRadius="8dp" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
